fixed overflow

--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@
     box-sizing: border-box;
 }
 
+html {
+    overflow-x: hidden;
+}
+
 /*colors for the name text*/
 #name {
     color: #cf1c58;
@@ -293,7 +297,7 @@ p {
     }
 
     #projects {
-        height: 80vh;
+        height: 100vh;
         width: 100vw;
 
     }
@@ -327,7 +331,7 @@ p {
         font-size: 0.8em;
         margin-left: none;
         width: 60%;
-        padding-bottom: 10px;
+        padding-bottom: 20px;
         gap: 10px;
         justify-content: flex-end;
     }
